--- a/clientes.html
+++ b/clientes.html
@@ -31,10 +31,10 @@
                         <a class="nav-link branco" href="menu.html"><i class="bi bi-house"></i> Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link branco active" aria-current="page" href="clientes.html"><i class="bi bi-cart4"></i></i> Clientes</a>
+                        <a class="nav-link branco active" aria-current="page" href="clientes.html"><i class="bi bi-cart4"></i></i> Loja</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link branco" href="relatorio.html"><i class="bi bi-journal-check"></i> Relatórios</a>
+                        <a class="nav-link branco" href="sobre.html"><i class="bi bi-person-circle"></i> Sobre nós</a>
                     </li>
                 </ul>
             </div>
@@ -70,8 +70,6 @@
         <div class="row">
             <div class="col-md-6">
 
-                <div id="msgAlerta"></div>
-
                 <form name="form-func" id="formCadastro" method="post" class="margintop" style="background-color:rgb(241, 241, 241)">
 
                     <fieldset>
@@ -80,7 +78,7 @@
                         <br>
                         <label>Nome Completo: </label>
                         <input type="text" name="nome" id="nome" required placeholder="Nome Completo" title="informe o nome" autofocus maxlength="50" />
-                        <label>Dada de Nascimento: </label>
+                        <label>Data de Nascimento: </label>
                         <input type="date" name="nascimento" id="nascimento" required/>
                         <br>
                         <label>Sexo: </label>
@@ -99,18 +97,18 @@
                         <input type="text" id="telefone" name="telefone" id="telefone" oninput="formatarTelefone(this)" pattern="[(][0-9]{2}[)][0-9]{4,5}[-][0-9]{4,5}" title="Informe um número de telefone ou celular" maxlength="14" placeholder="(99)9999-9999" required />
                         <label>Forma de envio: </label>
                         <select name="formadeenvio" id="formadeenvio" required>
-                <option value="" id="envio-0">Selecione...</option>
-                <option value="Entregar" id="envio-1">Entregar</option>
-                <option value="Retirar" id="envio-2">Retirar do local</option>
+                <option value="" id="envio-0" name="envio_0">Selecione...</option>
+                <option value="Entregar" id="envio_1" name="envio_1">Entregar</option>
+                <option value="Retirar" id="envio_2" name="envio_2">Retirar do local</option>
             </select>
                         <br><br><label>CEP: </label><br>
                         <input type="text" id="cep" name="cep" pattern="[0-9]{2}[0-9]{3}[-][0-9]{3}" oninput="formatarCEP(this)" maxlength="9" title="Informe um cep no formato 99999-999" placeholder="00000-000" required />
                         <label class="esquerda">Selecione o(os) Instrumento(os) e a quantidade <br> que deseja comprar: </label><br><br>
-                        <input type="number" id="ins_0" value=0 name="ins_0" min="0" max="99" step="1" required/>Flauta Transversal
-                        <br><input type="number" id="ins_1" value=0 name="ins_1" min="0" max="99" step="1" required/>Piano
-                        <br><input type="number" id="ins_2" value=0 name="ins_2" min="0" max="99" step="1" required/>Violão
-                        <br><input type="number" id="ins_3" value=0 name="ins_3" min="0" max="99" step="1" required/>Bateria
-                        <br><input type="number" id="ins_4" value=0 name="ins_4" min="0" max="99" step="1" required/>Microfone
+                        <input type="number" min="0" id="ins_0" value=0 name="ins_0" min="0" max="99" step="1" required/>Flauta Transversal
+                        <br><input type="number" min="0" id="ins_1" value=0 name="ins_1" min="0" max="99" step="1" required/>Piano
+                        <br><input type="number" min="0" id="ins_2" value=0 name="ins_2" min="0" max="99" step="1" required/>Violão
+                        <br><input type="number" min="0" id="ins_3" value=0 name="ins_3" min="0" max="99" step="1" required/>Bateria
+                        <br><input type="number" min="0" id="ins_4" value=0 name="ins_4" min="0" max="99" step="1" required/>Microfone
                     </fieldset>
                     <br><br>
                     <h6>Agradecemos pela preferência e tenha um ótimo dia!</h6>
@@ -133,6 +131,7 @@
                         </div>
                     </div>
                 </form>
+                <div id="msgAlerta"></div>
             </div>
 
 
@@ -222,6 +221,36 @@
                 </table>
             </div>
         </div>
+    </div>
+
+    <br>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10 window" style="background-color:rgb(197, 255, 195)">
+
+            <br>
+            <center>
+                <h1>🛒 Relatório de Vendas 📋</h1>
+            </center>
+            <br>
+
+        </div>
+    </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10 window">
+            <div id="msgAlerta"></div>
+            <button class="btn" type="button" disabled id="carregandoDados">
+              <span class="spinner-border spinner-border-sm" role="status"></span>
+              Carregando os dados...
+            </button>
+            <div class="table-responsive">
+                <table id="tabelaDados" class="table table-sm table-sriped table-bordered" style="background-color:rgb(223, 223, 223)"></table>
+            </div>
+        </div>
+    </div>
     </div>
 
     <br>
