--- a/menu.html
+++ b/menu.html
@@ -31,10 +31,10 @@
                         <a class="nav-link active" aria-current="page" href="menu.html"><i class="bi bi-house"></i> Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link branco" href="clientes.html"><i class="bi bi-cart4"></i></i> Clientes</a>
+                        <a class="nav-link branco" href="clientes.html"><i class="bi bi-cart4"></i></i> Loja</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link branco" href="relatorio.html"><i class="bi bi-journal-check"></i> Relatórios</a>
+                        <a class="nav-link branco" href="sobre.html"><i class="bi bi-person-circle"></i> Sobre nós</a>
                     </li>
                 </ul>
             </div>
